objects/vlocity_ins__AttributeBinding__c.object
<CustomObject>
    <description>Registers the binding of a Vlocity Attribute to a specific field in a specified object. The configured or default value of the Vlocity Attribute will be maintained in the specified field.</description>
    <fields>
        <fullName>vlocity_ins__AttributeCategoryId__c</fullName>
        <formula>vlocity_ins__AttributeId__r.vlocity_ins__AttributeCategoryId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Attribute Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeCode__c</fullName>
        <formula>vlocity_ins__AttributeId__r.vlocity_ins__Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vlocity Attribute Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeId__c</fullName>
        <label>Vlocity Attribute</label>
        <referenceTo>vlocity_ins__Attribute__c</referenceTo>
        <relationshipLabel>Vlocity Attribute Bindings</relationshipLabel>
        <relationshipName>VlocityAttributeBindings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FieldApiName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectClassId__c</fullName>
        <label>Object Class</label>
        <referenceTo>vlocity_ins__ObjectClass__c</referenceTo>
        <relationshipLabel>Vlocity Attribute Bindings</relationshipLabel>
        <relationshipName>VlocityAttributeBindings</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Vlocity Attribute Binding</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Attribute Binding Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Attribute Bindings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>